Update project structure for Vercel deployment

--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "leaderboard-frontend",
   "version": "1.0.0",
   "description": "Leaderboard frontend application",
-  "main": "app.js",
+  "main": "index.html",
   "scripts": {
-    "start": "live-server --port=8000 --no-browser"
+    "start": "live-server --port=8000 --no-browser",
+    "build": "echo 'No build step needed'"
   },
   "dependencies": {},
   "devDependencies": {
